--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+BloodPengu Web based Documentation
+
+Licensed under AdverXarial and mainly maintained by @byt3n33dl3
+
+```LICENSE
 MIT License
 
 Copyright (c) 2026 byt3n33dl3
@@ -19,3 +24,8 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
+```
+
+CONTACT
+
+For more, come to the documentation for use cases and write-ups <https://pengu-apm.github.io/pengu-apm>, if there's any security concern, please contact me at <byt3n33dl3@pm.me>
