--- a/README
+++ b/README
@@ -1,6 +1,18 @@
-BloodPengu Web based Documentation
+				        BloodPengu Web Based Documentation
 
-Licensed under AdverXarial and mainly maintained by @byt3n33dl3
+                    (c) 2026 by AdverXarial / <@byt3n33dl3>
+                <byt3n33dl3@pm.me> https://github.com/pengu-apm
+
+  		            Licensed under (see LICENSE file)
+
+           Please do not use in military or secret service organizations,
+                          or for illegal purposes.
+      (This is the wish of the author and non-binding. Many people working
+       in these organizations do not care for laws and ethics anyway.
+            You are not one of the "good" ones if you ignore this.)
+
+           NOTE: No, this is not meant to be a markdown doc! old school!
+          Licensed under AdverXarial and mainly maintained by @byt3n33dl3
 
 ```LICENSE
 MIT License
