--- a/README
+++ b/README
@@ -40,4 +40,4 @@ SOFTWARE.
 
 CONTACT
 
-For more, come to the documentation for use cases and write-ups <https://pengu-apm.github.io/pengu-apm>, if there's any security concern, please contact me at <byt3n33dl3@pm.me>
+For more, come to the documentation for use cases and write-ups <https://pengu-apm.github.io/>, if there's any security concern, please contact me at <byt3n33dl3@pm.me>
